force-app/main/default/objects/Country__c/fields/Country_Iso_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Country_Iso_Code_2__c</fullName>
    <label>Country Iso Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>