force-app/main/default/objects/Country__c/fields/Region_Acronyms__c.field-meta.xml
<CustomField>
    <fullName>Region_Acronyms__c</fullName>
    <label>Region Acronyms</label>
    <length>5</length>
    <type>Text</type>
</CustomField>